# rust-lean

./: README.md
adder/src/: lib.rs
axum-demo/: Cargo.toml
axum-demo/src/: main.rs
channels/: Cargo.toml
channels/src/: main.rs
cli-demo/: Cargo.toml
cli-demo/src/: main.rs
complex-num/: Cargo.toml
complex-num/src/: main.rs
demo-hello/: 404.html  Cargo.toml  hello.html
demo-hello-mutil/: 404.html  Cargo.toml  hello.html
demo-hello-mutil/src/: lib.rs  main.rs
demo-hello/src/: main.rs
demo-one/: Cargo.toml
demo-one/src/: main.rs
demo-three/: Cargo.toml
demo-three/src/: main.rs
demo-two/: Cargo.toml
demo-two/src/: main.rs
demo-vector/: Cargo.toml
demo-vector-one/: Cargo.toml
demo-vector-one/src/: main.rs
demo-vector/src/: main.rs
error-demo/src/: main.rs
foo-demo/: Cargo.toml
foo-demo/src/: main.rs
generic/src/: main.rs
getinfo/: Cargo.toml
getinfo/src/: client.rs  server.rs
http-demo/: Cargo.toml
httpie/: Cargo.toml
httpie/src/: main.rs
io/: Cargo.toml
io/src/: main.rs
macro-demo/src/: main.rs
match-enum/src/: main.rs
match-mode/: Cargo.toml
match-mode-one/: Cargo.toml
match-mode-one/src/: main.rs
match-mode/src/: main.rs
match-option/src/: main.rs
matchs-mode/: Cargo.toml
matchs-mode/src/: main.rs
methods/src/: main.rs
my-mod/src/: main.rs
my-redis/: Cargo.toml
my-redis/examples/: hello-redis.rs
my-redis/src/: main.rs
pointer/src/: main.rs
pointer_box_trait/: Cargo.toml
pointer_box_trait/src/: main.rs
pointer_one/: Cargo.toml
pointer_one/src/: main.rs
principle/: Cargo.toml
principle/src/: main.rs
process/: Cargo.toml  README.md
process/src/: main.rs
result_one/: Cargo.toml
result_one/src/: main.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
slice/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
tokio-channel/: Cargo.toml
tokio-channel/src/: main.rs
tokio-demo/: Cargo.toml
tokio-demo/src/: main.rs
tokio-one/: Cargo.toml
tokio-one/src/: main.rs
trait-demo-four/: Cargo.toml
trait-demo-four/src/: main.rs
trait-demo-one/: Cargo.toml
trait-demo-one/src/: main.rs
trait-demo-three/: Cargo.toml
trait-demo-three/src/: main.rs
trait-demo-two/: Cargo.toml
trait-demo-two/src/: main.rs
trait-demo/src/: main.rs
trait-where/: Cargo.toml
trait-where/src/: main.rs
translation/: Cargo.toml  config.toml
translation/src/: args.rs  error.rs  main.rs  prelude.rs
translation/src/config/: config.rs
translation/src/utils/: clint.rs  direntry_froms.rs  mod.rs
translation/tests/: test.rs
tuple/: Cargo.toml
tuple/src/: main.rs
unit-testing/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
