[package]
name = "translation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] } # for our async runtime
config = "0.11.0"
toml = "0.5.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
structopt = "0.3.22"
clap = { version = "4.3.23", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
